--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "update-db": "node dist/database.js",
-    "deploy-cmds": "node dist/deploy-commands.js",
-    "watch": "nodemon --watch 'src/**/*.ts' --exec 'npm run start'"
+    "deploy-cmds": "node dist/deploy-commands.js"
   },
   "dependencies": {
     "alchemy-sdk": "^2.4.1",
@@ -21,7 +20,6 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/sqlite3": "^3.1.8",
-    "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   }
 }
