--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "update-db": "node dist/database.js",
+    "update-db": "node dist/run-update.js",
     "deploy-cmds": "node dist/deploy-commands.js"
   },
   "dependencies": {
     "alchemy-sdk": "^2.4.1",
     "axios": "^1.3.2",
+    "cron": "^2.2.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
+    "@types/cron": "^2.0.0",
     "@types/node": "^18.11.18",
     "@types/sqlite3": "^3.1.8",
     "typescript": "^4.9.5"
