--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "^2.2.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "https-proxy-agent": "^5.0.1",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
