--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "alchemy-sdk": "^2.4.1",
-    "axios": "^1.3.2",
     "cron": "^2.2.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "https-proxy-agent": "^5.0.1",
+    "node-fetch": "^2.6.9",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@types/cron": "^2.0.0",
     "@types/node": "^18.11.18",
+    "@types/node-fetch": "^2.6.2",
     "@types/sqlite3": "^3.1.8",
     "typescript": "^4.9.5"
   }
