--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gooey-discord-query-bot",
   "type": "commonjs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Discord bot to query the ETH Gobblers collection metadata",
   "main": "index.js",
   "scripts": {
@@ -14,13 +14,13 @@
   "dependencies": {
     "alchemy-sdk": "^2.4.1",
     "axios": "^1.3.2",
-    "cron": "^2.2.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "@types/cron": "^2.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/sqlite3": "^3.1.8",
     "typescript": "^4.9.5"
