--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,9 @@
 version: '3'
 services:
-  app:
+  gooeylytics:
     build: .
+    container_name: gooeylytics
     working_dir: /usr/app
     environment:
       - NODE_ENV=production
+    restart: unless-stopped
