move one use scripts to their own directory

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "update-db": "node dist/run-update.js",
-    "deploy-cmds": "node dist/deploy-commands.js",
-    "destroy-cmds": "node dist/destroy-commands.js"
+    "deploy-cmds": "node dist/scripts/deploy-commands.js",
+    "destroy-cmds": "node dist/scripts/destroy-commands.js"
   },
   "dependencies": {
     "alchemy-sdk": "^2.4.1",
