--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
-    "sqlite3": "^5.1.4"
+    "redis": "^4.6.6"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
-    "@types/sqlite3": "^3.1.8",
     "typescript": "^4.9.5"
   }
 }
